2009-11-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: ticslevel => xyplane.

	* src/color.c (make_palette) src/graphics.c (plot_image_or_update_axes):
	Remove useless warning messages.

	* src/axis.c (add_tic_user) src/term.c (enh_err_check enhanced_recursion): 
	Replace in-line warnings sent to stderr by instead calling int_warn().

2009-11-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/breader.c:  Give df_libgd_get_pixel() a valid return value even
	if it's only a dummy function because there is no png support.

2009-11-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Document "linetype <n>" option of linecolor and
	textcolor.

2009-11-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.dj2 config/makefile.cyg config/makefile.mgw
	config/makefile.nt config/makefile.os2: Added GNUPLOT_JS_DIR.

	* term/canvas.trm (CANVAS_graphics): Fix // vs \ and / for jsdir and
	Windows.

2009-10-24  David Marx  <itsdmarx@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp:  The pieces of a concatenated string
	literal must be wrapped in wxT() to satisfy the Sun Studio CC compiler.
	Bug #2883574

2009-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): The mechanism for flagging "lc variable"
	was not being triggered for plot types VECTOR, CIRCLES, BOXES.
	Bug fix

2009-10-22  David Marx  <itsdmarx@users.sourceforge.net>

	* src/wxterminal/wxt_gui.cpp:  _T() macro has been deprecated in favor
	of wxT().
	Bug #2883574

2009-10-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c: Initialize each new surface in a 3d dataset directly
	from the first surface.
	Bug #2876167

2009-10-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (test_term):  Add a few items to the test page output if
	the current terminal supports them:  enhanced text, transparency.

2009-10-10  Jost Brachert  <jotyc@users.sourceforge.net>

	* src/datafile.c (plot_option_index) docs/gnuplot.doc: