@@ -1,5 +1,5 @@
 /*
- * $Id: gp_cairo.c,v 1.48.2.1 2009/08/31 18:31:25 sfeam Exp $
+ * $Id: gp_cairo.c,v 1.48.2.2 2009/11/07 03:39:40 sfeam Exp $
  */
 
 /* GNUPLOT - gp_cairo.c */
@@ -686,6 +686,43 @@ gchar * gp_cairo_convert(plot_struct *plot, const char* string)
 	return string_utf8;
 }
 
+/*
+ * The following #ifdef WIN32 section is all to work around a bug in
+ * the cairo/win32 backend for font rendering.  It has the effect of
+ * testing for libfreetype support, and using that instead if possible.
+ * Suggested by cairo developer Behdad Esfahbod. 
+ */
+#ifdef WIN32
+PangoLayout *gp_cairo_create_layout (cairo_t *cr)
+{
+    static PangoFontMap *fontmap;
+    PangoContext *context;
+    PangoLayout *layout;
+
+    if (fontmap == NULL) {   
+        fontmap = pango_cairo_font_map_new_for_font_type(CAIRO_FONT_TYPE_FT);
+        if (fontmap == NULL) {
+	    fontmap = pango_cairo_font_map_get_default();
+        }
+    }
+
+#if PANGO_VERSION_MAJOR > 1 || PANGO_VERSION_MINOR >= 22
+    context = pango_font_map_create_context(fontmap);
+#else
+    context = pango_cairo_font_map_create_context((PangoCairoFontMap *) fontmap);
+#endif
+
+    layout = pango_layout_new(context);
+    g_object_unref(context);
+
+    return layout;
+}
+#else
+PangoLayout *gp_cairo_create_layout (cairo_t *cr)
+{
+    return pango_cairo_create_layout(cr);
+}
+#endif
 
 void gp_cairo_draw_text(plot_struct *plot, int x1, int y1, const char* string)
 {
@@ -724,7 +761,7 @@ void gp_cairo_draw_text(plot_struct *plot, int x1, int y1, const char* string)
 	}
 
 	/* Create a PangoLayout, set the font and text */
-	layout = pango_cairo_create_layout (plot->cr);
+	layout = gp_cairo_create_layout (plot->cr);
 	
 	pango_layout_set_text (layout, string_utf8, -1);
 	g_free(string_utf8);
@@ -743,7 +780,7 @@ void gp_cairo_draw_text(plot_struct *plot, int x1, int y1, const char* string)
 		plot->fontstyle ? PANGO_STYLE_ITALIC : PANGO_STYLE_NORMAL);
 	pango_layout_set_font_description (layout, desc);
 	pango_font_description_free (desc);
-
+	
 	pango_layout_get_extents(layout, &ink_rect, &logical_rect);
 
 	/* EAM Mar 2009 - Adjusting the vertical position for every character fragment */
@@ -1178,7 +1215,7 @@ void gp_cairo_enhanced_flush(plot_struct *plot)
 
 		/* Create a PangoLayout, set the font and text
 		 * with the saved attributes list, get extents */
-		save_layout = pango_cairo_create_layout (plot->cr);
+		save_layout = gp_cairo_create_layout (plot->cr);
 		pango_layout_set_text (save_layout, gp_cairo_save_utf8, -1);
 		pango_layout_set_attributes (save_layout, gp_cairo_enhanced_save_AttrList);
 		pango_layout_get_extents(save_layout, NULL, &save_logical_rect);
@@ -1201,7 +1238,7 @@ void gp_cairo_enhanced_flush(plot_struct *plot)
 
 		/* Create a PangoLayout, set the font and text with
 		 * the saved attributes list, get extents */
-		underprinted_layout = pango_cairo_create_layout (plot->cr);
+		underprinted_layout = gp_cairo_create_layout (plot->cr);
 		pango_layout_set_text (underprinted_layout, gp_cairo_underprinted_utf8, -1);
 		pango_layout_set_attributes (underprinted_layout, gp_cairo_enhanced_underprinted_AttrList);
 		pango_layout_get_extents(underprinted_layout, NULL, &underprinted_logical_rect);
@@ -1211,7 +1248,7 @@ void gp_cairo_enhanced_flush(plot_struct *plot)
 		/* compute the size of the text to overprint*/
 
 		/* Create a PangoLayout, set the font and text */
-		current_layout = pango_cairo_create_layout (plot->cr);
+		current_layout = gp_cairo_create_layout (plot->cr);
 		pango_layout_set_text (current_layout, enhanced_text_utf8, -1);
 		current_desc = pango_font_description_new ();
 		pango_font_description_set_family (current_desc, gp_cairo_enhanced_get_fontname(plot));
@@ -1249,7 +1286,7 @@ void gp_cairo_enhanced_flush(plot_struct *plot)
 		/* position must be modified, but text not actually drawn */
 		/* the idea is to use a blank character, drawn with the width of the text*/
 
-		current_layout = pango_cairo_create_layout (plot->cr);
+		current_layout = gp_cairo_create_layout (plot->cr);
 		pango_layout_set_text (current_layout, gp_cairo_utf8, -1);
 		pango_layout_set_attributes (current_layout, gp_cairo_enhanced_AttrList);
 		pango_layout_get_extents(current_layout, &current_ink_rect, &current_logical_rect);
@@ -1257,7 +1294,7 @@ void gp_cairo_enhanced_flush(plot_struct *plot)
 
 		/* we first compute the size of the text */
 		/* Create a PangoLayout, set the font and text */
-		hide_layout = pango_cairo_create_layout (plot->cr);
+		hide_layout = gp_cairo_create_layout (plot->cr);
 		pango_layout_set_text (hide_layout, enhanced_text_utf8, -1);
 		hide_desc = pango_font_description_new ();
 		pango_font_description_set_family (hide_desc, gp_cairo_enhanced_get_fontname(plot));
@@ -1288,7 +1325,7 @@ void gp_cairo_enhanced_flush(plot_struct *plot)
 		/* we first compute the size of the text */
 	
 		/* Create a PangoLayout, set the font and text */
-		zerowidth_layout = pango_cairo_create_layout (plot->cr);
+		zerowidth_layout = gp_cairo_create_layout (plot->cr);
 		pango_layout_set_text (zerowidth_layout, enhanced_text_utf8, -1);
 		zerowidth_desc = pango_font_description_new ();
 		pango_font_description_set_family (zerowidth_desc, gp_cairo_enhanced_get_fontname(plot));
@@ -1420,7 +1457,7 @@ void gp_cairo_enhanced_finish(plot_struct *plot, int x, int y)
 	double vert_just, arg, enh_x, enh_y, delta, deltax, deltay;
 
 	/* Create a PangoLayout, set the font and text */
-	layout = pango_cairo_create_layout (plot->cr);
+	layout = gp_cairo_create_layout (plot->cr);
 
 	pango_layout_set_text (layout, gp_cairo_utf8, -1);
 
@@ -1635,7 +1672,7 @@ void gp_cairo_set_termvar(plot_struct *plot, unsigned int *v_char,
 	unsigned int tmp_v_char, tmp_h_char;
 
 	/* Create a PangoLayout, set the font and text */
-	layout = pango_cairo_create_layout (plot->cr);
+	layout = gp_cairo_create_layout (plot->cr);
 	pango_layout_set_text (layout, "0123456789", -1);
 	desc = pango_font_description_new ();
 	pango_font_description_set_family (desc, plot->fontname);
